# zuloid

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Dockerfile  LICENSE.txt  README.md  TODO  TODO.txt  UCIv2.txt  UGEI.txt  build.rs  manpage.1.md  notes.txt  pendulum.py  redis.conf  rustfmt.toml  setup.py  train.py
UGEI/: 3x3.json  chess.json
api/: UGEI.txt
api/games/: chess.json  risk.json
app/: Cargo.toml  magics.py  ucea.py  ucea.txt
app/.Z64C/: help.txt  ucirc
app/.Z64C/help/: help.txt
app/.Z64C/test/pgn/: checkmate.uci  fifty.uci  illegal.fen  insufficient.uci  stalemate.uci  threefold.uci
app/chess/: Cargo.toml  magics.txt
app/chess/src/: board.rs  color.rs  coordinates.rs  fen.rs  lib.rs  magic.rs  movegen.rs  moving.rs  perft.rs  piece.rs
app/common/: Cargo.toml
app/common/src/: lib.rs
app/engine/include/: api.h  bitboards.h  clock.h  cmd.h  driver.h  engine.h  game.h  globals.h  log.h  mode.h  settings.h  switches.h  trace.h  utils.h
app/engine/include/chess/: board.h  color.h  coord.h  dir.h  fen.h  legality.h  move.h  piece.h  result.h  termination.h
app/engine/include/evaluation/: network.h
app/engine/include/search/: scontroller.h  ttable.h  ttable_node.h
app/engine/src/: api.c  bitboards.c  bitboards.h  board.c  board.h  clock.c  clock.h  cmd.c  cmd.h  color.c  color.h  coord.c  coord.h  dir.h  driver.c  engine.c  engine.h  engine_calls.c  engine_calls.h  fen.c  fen.h  game.c  globals.c  globals.h  main.c  model.c  move.c  move.h  move_stack.c  move_stack.cpp  move_stack.h  mover.c  mover.h  network.cpp  piece.c  piece.h  piece_map.h  result.c  result.h  rpc.cpp  (+14 more)
app/engine/src/chess/: board.c  color.c  coord.c  dir.c  fen.c  legality.c  move.c  piece.c  piece_map.h  result.c
app/engine/src/evaluation/: network.c  network_af.c  network_cpu.c
app/engine/src/search/: scontroller.c  ttable.c  ttable_node.c
app/engine/test/: board.cpp  coord.cpp  engine.cpp  fen.cpp  legality.cpp  perft.cpp  result.cpp  saves_dir.cpp  shell.cpp  square.cpp  uci.cpp  utils.cpp
app/engine/test/chess/: board.cpp  coord.cpp  fen.cpp  result.cpp
app/engine/test/pgn/: lichess.uci.checkmate  lichess.uci.fivefold  lichess.uci.insufficient  lichess.uci.stalemate
app/engine/test/tools/: insights.py
app/engine/uci/: examples.json
app/include/: Z64C.h  bitboards.h  clock.h  debug.h  engine.h  game.h  globals.h  mode.h  rpc.h  settings.h  switches.h  tablebase.h  trace.h  utils.h
app/include/UGEI/: errors.h  methods.h
app/include/chess/: board.h  castling.h  color.h  coord.h  coordinates.h  fen.h  generation.h  legality.h  move.h  move_generator.h  piece_types.h  position.h
app/include/eval/: eval.h  eval_state.h  network.h
app/include/heuristics/: eval.h  eval_state.h
app/include/search/: cache.h  ttable.h
app/include/time/: game_clock.h  time_control.h  time_manager.h
app/magics/: Cargo.toml
app/magics/src/: lib.rs
app/src/: Z64C.c  bitboards.c  cache.rs  clock.c  core.rs  engine.c  err.rs  eval.rs  fen.rs  game.c  globals.c  magic.rs  main.c  main.rs  moving.rs  perft.rs  rpc.c  settings.c  tablebase.c  time.rs  utils.c
app/src/UGEI/: dispatch.c  errors.c  property_names.c
app/src/UGEI/methods/: config.c  get.c  init.c  setup.c
app/src/chess/: board.c  board.rs  color.c  color.rs  coordinates.c  coordinates.rs  dir.c  fen.c  fen.rs  generation.c  magic.rs  mod.rs  movegen.rs  mover.rs  moving.rs  perft.rs  piece_map.h  piece_types.c  position.c
app/src/chess/tables/: file.rs  king.rs  mod.rs
app/src/eval/: network.c  network_af.c
app/src/protocols/: mod.rs  uci.rs
app/src/search/: cache.c  ttable.c
app/src/time/: game_clock.c  time_control.c
app/test/: main.c  perft.c  utils.c
app/test/chess/: fen.c  result.c  result.cpp
app/test/suites/: positions.epd
app/training/: main.py  setup.py
app/uci/: examples.json
app/zorro/: Cargo.toml  build.rs
app/zorro/src/: cache.rs  core.rs  eval.rs  main.rs  time.rs  utils.rs
app/zorro/src/protocols/: mod.rs  uci.rs
doc/: slidiing-pieces.md
docs/: CECP.html  macros.tex  manpage.1.md  manual.aux  manual.bcf  manual.blg  manual.run.xml  manual.tex  manual.toc  polyglot.html  qperft.c
docs/contents/: architecture-overview.tex  citations.bib  evaluation-and-search.tex  faq.tex  heuristics-training.tex  on-performance.tex  preface.tex  user-manual.tex
include/: Z64C.h  agent.h  config.h  core.h  debug.h  engine.h  eval.h  fast_range.h  feature_flags.h  globals.h  jsonrpc_errors.h  meta.h  methods.h  protocols.h  rating.h  settings.h  switches.h  utils.h
include/UGEI/: methods.h  property_names.h
include/UI/: cmd.h  methods.h
include/api/: jsonrpc_errors.h  methods.h  protocols.h
include/cache/: cache.h  fast_range.h
include/chess/: bb.h  bb_subset_iter.h  castling.h  color.h  coordinates.h  diagonals.h  export_magics.h  fen.h  find_magics.h  generation.h  magic.h  mnemonics.h  move.h  movegen.h  perft.h  piece_types.h  pieces.h  position.h  (+2 more)
src/: 960.c  960.h  CMakeLists.txt  Z64C.c  ann.c  board.c  board.fbs  board.h  cache.rs  castling.h  chess.rs  chessboard.c  chessboard.h  clock.c  clock.h  cmd.h  color.c  color.h  coord.c  coord.h  coordinates.c  coordinates.h  core.rs  debug.c  dfs.rs  direction.h  elo.rs  engine.c  engine.h  err.rs  eval.rs  fast_range.c  fen.c  fen.h  game.c  globals.c  globals.rs  history.h  jsonrpc_errors.c  lib.rs  (+37 more)
test/: battle_stockfish.py  board.cpp  board.py  cache.c  chessboard.py  coord.cpp  dump.rdb  fen.cpp  fen.py  jsonrpc.c  main.c  methods.c  square.cpp  string_is_whitespace.c  test_attacks.c  test_cache.c  test_castling_mask.c  test_color.c  test_dyn_str.c  test_fen_conversion.c  test_fen_init.c  test_jsonrpc_compliance.c  test_perft.c  test_perft_results.c  test_rating.c  test_ugei_config.c  test_ugei_init.c  test_ugei_init_reentrant.c  test_ugei_setup.c  test_utils.c  test_whitespace_detection.c  uci.cpp  uci.py  utils.c  utils.cpp
tests/: easy_tactics.rs
tools/: amalgamate.sh  clang-format-all.sh  cloc.sh  files-without-spdx-id.sh  perft_bisect.py
uci/: play_around.uci
(+245 files in other folders)
