[package]
name = "zorro"
version = "2.0.0"
authors = ["Filippo Costa <filippocosta.italy@gmail.com>"]
build = "build.rs"
edition = "2018"
repository = "https://github.com/neysofu/Z64C"
readme = "README.md"
license = "PROPRIETARY"
publish = false

[dependencies]
bytesize = "1"
enum-map = "0.6"
enum-map-derive = "0.4"
strum = "0.15.0"
strum_macros = "0.15.0"

[dev-dependencies]
semver = "0.9"

[build-dependencies]
chrono = "0.4.7"
