[package]
name = "zorro"
version = "2.5.0"
authors = ["Filippo Costa <filippocosta.italy@gmail.com>"]
build = "build.rs"
readme = "README.md"
edition = "2018"
publish = false

[dependencies]
array-init = "0.1.1"
bitintr = "0.3"
bytesize = "1"
crossbeam-channel = "0.4"
enum-map = "0.6"
enum-map-derive = "0.4"
lru = "0.5.2"
rand = "0.7"
rayon = "1.3.0"
strum = "0.15.0"
strum_macros = "0.15.0"
webbrowser = "0.5.2"

[dev-dependencies]
semver = "0.9"

[build-dependencies]
chrono = "0.4.7"

[profile.test]
opt-level = 2

[profile.release]
panic = "abort"
lto = true
codegen-units = 16
incremental = false
opt-level = 3
